# Qt-Simple

./: CMakeLists.txt
gui/: mainwindow.cpp  mainwindow.h
main/: main.cpp
